# FileENIAC

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  CHANGELOG.md  CHECKSUMS-v0.1.10.txt  CHECKSUMS-v0.1.11.txt  CHECKSUMS-v0.1.12.txt  CHECKSUMS-v0.1.2.txt  CHECKSUMS-v0.1.3.txt  CHECKSUMS-v0.1.4.txt  CHECKSUMS-v0.1.5.txt  CHECKSUMS-v0.1.7.txt  CHECKSUMS-v0.1.8.txt  CHECKSUMS-v0.1.9.txt  CHECKSUMS.txt  Dockerfile  FileENIAC.lnk  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES.md  THIRD_PARTY_LICENSES.md  check_icons.py  docker-compose.yml  go.mod  go.sum  main.go  map.txt  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.husky/: commit-msg  pre-commit
apps/desktop/src-tauri/: Cargo.toml  LICENSE.txt  installer-license.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-capability.json
apps/desktop/src-tauri/nsis-hooks/: legal-pages.nsh
apps/desktop/src-tauri/permissions/autogenerated/: get_api_port.toml  get_api_token.toml  get_backend_info.toml  get_sidecar_log_path.toml  set_api_port.toml  set_api_token.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: main.go
docker/: backend.Dockerfile
docs/: ADR-000-vision.md  ADR-001-workspace.md  ADR-002-project-registry.md  ADR-003-github-integration.md  ADR-004-ftps-engine.md  ADR-005-sync-engine.md  ADR-006-history-engine.md  ADR-007-desktop-ui.md  ADR-008-agent-api.md  ADR-009-database-schema.md  ADR-010-security.md  ADR-011-workspace-registry.md  ADR-012-github-integration.md  ADR-013-workspace-bootstrap.md  ADR-014-transport-layer.md  ARCHITECTURE_AUDIT.md  DESKTOP_ONBOARDING.md  (+5 more)
(+270 files in other folders)
