[package]
name = "eniac-workspace"
version = "0.1.0"
description = "ENIAC Workspace Desktop"
authors = ["ENIAC Systems"]
edition = "2021"

[lib]
name = "eniac_workspace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
