[package]
name = "fileeniac"
version = "0.1.6"
description = "FileENIAC Desktop"
authors = ["ENIAC Systems"]
edition = "2021"

[lib]
name = "fileeniac_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
